fix: 优化scrollbar组件，添加listDirection方向属性

--- a/src/packages/listView/index.scss
+++ b/src/packages/listView/index.scss
@@ -6,13 +6,6 @@
   gap: 6px;
   position: relative;
   box-sizing: border-box;
-  ._content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0px;
-    overflow: auto;
-  }
   ._inner {
     position: absolute;
     width: 100%;
